# midi-track-extractor

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp
