CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

set(PROJECT_NAME "midi-track-extractor")

PROJECT(${PROJECT_NAME})

SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

SET(ROOT_DIR CACHE PATH "")

SET(SRCS
    src/main.cpp
)

FILE(GLOB JDKMIDI
    "${ROOT_DIR}/common_libs/libjdkmidi-20051014/src/*"
)

SOURCE_GROUP("JdkMidi" FILES ${JDKMIDI})

INCLUDE_DIRECTORIES(
    ${ROOT_DIR}/common_libs/boost_1_56_0/
    ${ROOT_DIR}/common_libs/libjdkmidi-20051014/include/
)

LINK_DIRECTORIES(
)

ADD_EXECUTABLE(${PROJECT_NAME}
    ${SRCS}
    ${JDKMIDI}
)

TARGET_LINK_LIBRARIES(${PROJECT_NAME}
)
